fix supply ways on safari see https://stackoverflow.com/questions/13347947/css-filter-on-retina-display-fuzzy-images

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -559,6 +559,7 @@
   height: 100%;
   left: -185px;
   z-index: 2;
+  transform: translateZ(0);
 }
 .delivery::before{
   content: '';
@@ -570,6 +571,7 @@
   height: 100%;
   right: -185px;
   z-index: 2;
+  transform: translateZ(0);
 }
 
 @media (width >= 768px){
